2017-07-28  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r29237.

	* src/gsad.c (init_validator): Add "auto_cache_rebuild".

	* src/gsad_omp.c (save_my_settings_omp): Add "Auto Cache Rebuild"
	setting.

	* src/html/classic/omp.xsl (get_my_settings, edit_my_settings): Add
	"Auto Cache Rebuild" setting.

2017-05-23  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (create_slave_omp): Use g_markup_printf_escaped to
	build the OMP command to ensure password is escaped.

2017-05-09  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r28354.

	* src/gsad.c (init_validator): Remove limitation on hosts length.

	* src/html/classic/omp.xsl (html-create-target-form)
	(html-edit-target-form): Remove hosts input length constraint.

2017-05-05  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0.13.

2017-05-05  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0.12 release.

	* CHANGES: Updated.

2017-03-31  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (save_filter_omp): Send the modify_filter OMP command
	with openvas_server_sendf_xml to ensure term is escaped.

2017-03-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r28062.

	* src/html/classic/omp.xsl (report [assets]): Add missing blank cells
	in the footer row of the table.

2017-01-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r27224.

	* src/validator.c (openvas_validator_rule_free): Fix memory leak.

2016-12-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_my_settings): Add format string to make it easier
	to compile with warnings.

2016-12-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r26890.

	* src/html/classic/help.xsl (new_alert.html): Improve the description of
	the Known Hosts field.

2016-12-13  Matthew Mundell <matthew.mundell@greenbone.net>
