@@ -1,3 +1,10 @@
+2017-08-22  Timo Pollmeier <timo.pollmeier@greenbone.net>
+
+	Backport r29405.
+
+	* src/gsad_omp.c (create_report_omp, create_task_omp)
+	(create_agent_omp): XML escape name and comment.
+
 2017-07-28  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Backport r29237.
